--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -656,7 +656,8 @@
                         </li>
                         <li>
                             Det är den etablerade personens huvudansvar att ni kommer i kontakt med varandra inom 7 dagar från att ni fått ett 
-                            matchningsmail från oss. Byt gärna telefonnummer med varandra för att lättare bestämma möte.
+                            matchningsmail från oss. Byt gärna telefonnummer med varandra för att lättare bestämma möte. Om du inte har sett 
+                            något email från oss på ett tag, glöm inte att kolla din skräppost/spamfilter eller kontakta oss. 
                         </li>
                         <li>
                             Du måste behandla alla på ett respektfullt sätt. Tänk på att vara tydliga mot varandra då 
@@ -1113,8 +1114,8 @@ Your friends at Kompisbyrån
                     <![CDATA[
                         <h4>Vi som jobbar med Kompisbyrån</h4>
                         <p>
-                            Emma Hammar, grundare och verksamhetsledare<a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a><br>
-                            Clara Wäppling, projektledare<a href="mailto:clara@kompisbyran.se ">clara@kompisbyran.se </a><br>
+                            Emma Hammar, grundare och verksamhetsledare <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a><br>
+                            Clara Wäppling, projektledare <a href="mailto:clara@kompisbyran.se ">clara@kompisbyran.se </a><br>
                             Cecilia Holmgren, grundare<br>
                             Gabriella Hernqvist, ambassadör matchning<br>
                             Hanna Magnusson, ambassadör matchning<br>
