--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -1114,21 +1114,35 @@ Your friends at Kompisbyrån
                     <![CDATA[
                         <h4>Vi som jobbar med Kompisbyrån</h4>
                         <p>
-                            Emma Hammar, grundare och verksamhetsledare <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a><br>
-                            Clara Wäppling, projektledare <a href="mailto:clara@kompisbyran.se ">clara@kompisbyran.se </a><br>
-                            Cecilia Holmgren, grundare<br>
-                            Gabriella Hernqvist, ambassadör matchning<br>
-                            Hanna Magnusson, ambassadör matchning<br>
-                            Hedda Grew, ambassadör Linköping<br>
-                            Helena Rewucha, Kompisledare Göteborg<br>
-                            Helena Wannberg, Kompisledare Örebro<br>
-                            Heydar Sheykhali, ambassadör matchning<br>
-                            Jennifer Silander, ambassadör matchning<br>
-                            Jens Östgaard, Kompisledare Göteborg<br>
-                            Jon Gotlin, IT<br>
-                            Jonas Ouadih, ambassadör Malmö<br>
+                            Kansli<br> 
+                            Emma Hammar, grundare och verksamhetsledare, <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a><br>
+                            Clara Wäppling, projektledare, <a href="mailto:clara@kompisbyran.se ">clara@kompisbyran.se </a><br>
+
+                            IT<br>
+                            Jon Gotlin, IT-ansvarig<br>
+
+                            Kompisledare<br> 
+                            Helena Rewucha, Kompisledare Göteborg<br> 
                             Robert Thörnqvist, Kompisledare Göteborg<br>
-                            Sofia Winroth, Kompisledare Örebro
+                            Jens Östgaard, Kompisledare Göteborg<br>
+                            Helena Wannberg, Kompisledare Örebro<br> 
+                            Sofia Winroth, Kompisledare Örebro<br>
+                            
+                            Ambassadörer<br>  
+                            Hedda Grew, ambassadör Linköping<br> 
+                            Gabriella Hernqvist, ambassadör matchning<br> 
+                            Cecilia Holmgren, grundare och ambassadör matchning<br> 
+                            Hanna Magnusson, ambassadör matchning<br> 
+                            Jonas Ouadih, ambassadör Malmö<br> 
+                            Heydar Sheykhali, ambassadör matchning<br>  
+                            Jennifer Silander, ambassadör matchning<br> 
+                            Alexander Unge, ambassadör matchning<br> 
+                       
+                            Eventansvariga:
+                            Mari Multamäki, eventansvarig Stockholm<br> 
+                            Elisabeth Rimér-Asplund, eventansvarig Stockholm<br> 
+                            Maria Waldekranz, eventansvarig Stockholm<br> 
+                            Oliva Wideroth, teamledare eventansvariga Stockholm<br> 
                         </p>
                     ]]>
                 </target>
@@ -1138,20 +1152,16 @@ Your friends at Kompisbyrån
                 <target>
                     <![CDATA[
                         <p>
-                            Frågor om Fikakompis eller Musikkompis?<br>
-                            Göteborg: <a href="mailto:goteborg@kompisbyran.se">goteborg@kompisbyran.se</a><br>
-                            Malmö: <a href="mailto:malmo@kompisbyran.se">malmo@kompisbyran.se</a><br>
-                            Stockholm: <a href="mailto:stockholm@kompisbyran.se">stockholm@kompisbyran.se</a><br>
-                            Örebro: <a href="mailto:orebro@kompisbyran.se">orebro@kompisbyran.se</a><br>
-                            Övriga städer: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
-    
-                            Frågor om Startkompis: start@kompisbyran.se
-                
-                            Frågor om samarbete, rekrytering eller press: <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a> eller <a href="mailto:kontakt@kompisbyran.se ">kontakt@kompisbyran.se </a>
-                            
-                            Frågor om event: event@kompisbyran.se
-                            
-                            Övriga frågor: <a href="mailto:kontakt@kompisbyran.se">kontakt@kompisbyran.se</a><br>
+                            Frågor?<br> 
+                            Fikakompis/Musikkompis: <a href="mailto:matchning@kompisbyran.se ">matchning@kompisbyran.se </a><br>  
+                            Startkompis: <a href="mailto:start@kompisbyran.se ">start@kompisbyran.se </a><br>   
+                            Göteborg: <a href="mailto:goteborg@kompisbyran.se ">goteborg@kompisbyran.se </a><br> 
+                            Malmö: <a href="mailto:malmo@kompisbyran.se ">malmo@kompisbyran.se </a><br> 
+                            Stockholm: <a href="mailto:stockholm@kompisbyran.se ">stockholm@kompisbyran.se </a><br> 
+                            Örebro: <a href="mailto:orebro@kompisbyran.se ">orebro@kompisbyran.se </a><br>                             
+                            Event: <a href="mailto:event@kompisbyran.se">event@kompisbyran.se </a><br> 
+                            Samarbete, rekrytering eller press: <a href="mailto:emma@kompisbyran.se  ">emma@kompisbyran.se  </a><br>   
+                            Övrigt: <a href="mailto:kontakt@kompisbyran.se ">kontakt@kompisbyran.se </a><br>   
                         </p>
                     ]]>
                 </target>
